--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="header-list__icon">
               <img src="https://img.icons8.com/ios-filled/30/ECECEC/shopping-bag.png"/>
             </div>
-            <div class="header-list__icon">
+            <div id="hamburger" class="header-list__icon">
               <img src="https://img.icons8.com/ios/30/FFFFFF/menu--v1.png"/>
             </div>
           </div>
