All animations and styles done, just some few adjustments

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div>
   
           <div class="header-menu__block">
-            <div class="menu-block">
+            <div class="menu-block open">
               <div class="menu-block__text">
                 <sup>1</sup>
                 <div id="block-1" class="menu-text"></div>
