Final styles changes
Project Completed

--- a/index.html
+++ b/index.html
@@ -14,15 +14,9 @@
 
   <!-- Body-backgrounds -->
   <div id="main-img">
-    <div class="main-img__1">
-      <!-- https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/9f344d124147687.60fe6ca891bd1.jpg -->
-    </div>
-    <div class="main-img__2">
-      <!-- https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/eb8e65124147687.60fe6ca6d13af.jpg -->
-    </div>
-    <div class="main-img__3">
-      <!-- https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/3c73f0124147687.60fe903e364ad.jpg -->
-    </div>
+    <div class="main-img__1"></div>
+    <div class="main-img__2"></div>
+    <div class="main-img__3"></div>
   </div>
 
 
@@ -147,7 +141,7 @@
       <!-- View collection -->
       <div class="grid-view">
         <div class="grid-view__inn">
-          <a href="https://www.fmodern.jp/" target="_blank">
+          <a href="https://www.behance.net/gallery/124147687/Living-room-design-concept-for-a-villa" target="_blank">
             VIEW COLLECTION
           </a>
         </div>
